@@ -1,4 +1,8 @@
 v0.5dev
+  - fixed small bug in TransitionScene when a transition begins amidst another
+    transition
+  - changed implementation detail in code related to scene changes. User code
+    shouldn't notice except if using len(director.scene_stack
   - fixed cocos sprites too slow with respect pyglet sprites
   - issue 159 fixed scene transitions changing some outgoing scene members    
   - issue 160 fixed ZoomTransition traceback when called repeatedly  
